# Socket-Client-Server

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
Apps/SocketClient/: CMakeLists.txt  main.cpp
Apps/SocketServer/: CMakeLists.txt  main.cpp
CMake/: any.cmake
Tests/: CMakeLists.txt  TestUtils.cpp
